--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,16 +2,16 @@
   font-family: 'space-age';
   src: url('../font/space_age-webfont.eot');
   src: url('../font/space_age-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../font/space_age-webfont.woff2') format('woff2'),
-  url('../font/space_age-webfont.woff') format('woff'),
-  url('../font/space_age-webfont.ttf') format('truetype'),
-  url('../font/space_age-webfont.svg#space_ageregular') format('svg');
+       url('../font/space_age-webfont.woff2') format('woff2'),
+       url('../font/space_age-webfont.woff') format('woff'),
+       url('../font/space_age-webfont.ttf') format('truetype'),
+       url('../font/space_age-webfont.svg#space_ageregular') format('svg');
   font-weight:normal;
   font-style:normal;
 }
 
 body {
-  background: url('../img/background.jpg');
+	background: url('background.jpg');
   background-attachment: fixed;
   background-position: center; 
 }
@@ -50,6 +50,15 @@ a {
 	border-radius:10px;
 	border:1px solid #7cb9fe;
 	padding:20px 10px;
+	margin-left:auto;
+	margin-right:auto;
+	margin:10px;
+}
+
+.box3 {
+	border-radius:10px;
+	border:1px solid #7cb9fe;
+	padding:10px 10px;
 	margin-left:auto;
 	margin-right:auto;
 	margin:10px;
@@ -117,7 +126,7 @@ a {
 }
 
 .bt_login {
-	font-family: 'space-age', sans-serif;
+  font-family: 'space-age', sans-serif;
   color:#fff;
   font-size:33px;
   border-radius:22px;
@@ -125,6 +134,24 @@ a {
   background:#4588d6;
   padding:3px 20px;
   cursor:pointer;
+  text-align:center;
+  width:87%;
+	text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
+	-webkit-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.75);
+	-moz-box-shadow:    2px 2px 5px 0px rgba(50, 50, 50, 0.75);
+	box-shadow:         2px 2px 5px 0px rgba(50, 50, 50, 0.75);
+}
+
+.bt_acquista {
+	font-family: 'space-age', sans-serif;
+  color:#fff;
+  font-size:26px;
+  border-radius:22px;
+  border:0px;
+  background:#1E9705;
+  padding:3px 20px;
+  cursor:pointer;
+  text-align:center;
   width:67%;
 	text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
 	-webkit-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.75);
@@ -147,6 +174,148 @@ a {
 	line-height:28px;
 	padding:0px 10px;
 	border-radius:9px 0px 9px 0px;
+}
+
+.titolo_div_contenuti {
+	font-family: 'Ubuntu', sans-serif;
+  color:#fff;
+  font-size:15px;
+  text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
+	background:#083B6F;
+	position:relative;
+	right:10px;
+	bottom:20px;
+	height:42px;
+  width:auto;
+  display:inline-block;
+	line-height:18px;
+	padding:5px 20px;
+	border-radius:9px 0px 9px 0px;
+}
+
+.titolo_testo_microverba {
+  font-family: 'Ubuntu', sans-serif;
+  color:#fff;
+  font-weight:bold;
+  font-size:28px;
+  width:99%;
+  text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
+  text-align:center;
+  margin:30px 0px 60px 0px;
+}
+
+.titolo_testo_albero {
+  font-family: 'Ubuntu', sans-serif;
+  color:#fff;
+  font-weight:bold;
+  font-size:18px;
+  margin-right:10px;
+  position:relative;
+  bottom:4px;
+  text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
+}
+
+.ico_info {
+	background: url('ico_info.png');
+  background-size:100%;
+  width:40px;
+  height:40px;
+  margin:0px 10px;
+  position:relative;
+  top:5px;
+  display:inline-block;
+	-webkit-filter: drop-shadow(2px 2px 3px #333);
+  filter: drop-shadow(2px 2px 3px #333); 
+}
+
+.ico_info_microverba {
+	background: url('ico_info.png');
+  background-size:100%;
+  width:40px;
+  height:40px;
+  margin:0px 10px;
+  position:relative;
+  top:5px;
+  display:inline-block;
+	-webkit-filter: drop-shadow(2px 2px 3px #333);
+  filter: drop-shadow(2px 2px 3px #333); 
+}
+
+.ico_buy {
+	background: url('ico_buy.png');
+  background-size:100%;
+  width:40px;
+  height:40px;
+  margin:0px 10px;
+  position:relative;
+  top:5px;
+  display:inline-block;
+	-webkit-filter: drop-shadow(2px 2px 3px #333);
+  filter: drop-shadow(2px 2px 3px #333); 
+}
+
+.ico_lock {
+	background: url('ico_lock.png');
+  background-size:100%;
+  height:40px;
+  width:40px;
+  margin:0px 10px;
+  display:inline-block;
+	-webkit-filter: drop-shadow(2px 2px 3px #333);
+  filter: drop-shadow(2px 2px 3px #333);
+}
+
+.ico_unlock {
+	font-family: 'Ubuntu', sans-serif;
+	font-size:11px;
+	font-weight:bold;
+  color:#fff;
+	background:#FF900B;
+  height:auto;
+  width:auto;
+  padding:3px 10px;
+  margin:0px 10px;
+  border-radius:5px;
+  /*display:inline-block;*/
+  display:none;
+  -webkit-filter: drop-shadow(2px 2px 3px #333);
+  filter: drop-shadow(2px 2px 3px #333);
+}
+
+.ico_lock_microverba {
+	background: url('ico_lock.png');
+  background-size:100%;
+  height:40px;
+  width:40px;
+  margin:0px 10px;
+  position:relative;
+  top:5px;
+  display:inline-block;
+	-webkit-filter: drop-shadow(2px 2px 3px #333);
+  filter: drop-shadow(2px 2px 3px #333); 
+}
+
+.ico_cart {
+  background: url('ico_buy.png');
+  background-size:100%;
+  width:40px;
+  height:40px;
+  margin:0px 10px;
+  display:inline-block;
+	-webkit-filter: drop-shadow(2px 2px 3px #333);
+  filter: drop-shadow(2px 2px 3px #333);
+}
+
+.ico_close {
+	background: url('ico_close.png');
+  background-size:100%;
+  width:26px;
+  height:26px;
+  margin:0px 0px 20px 0px;
+  position:relative;
+  bottom:10px;
+  left:10px;
+  float:right;
 }
 
 .tabella_risultati {
@@ -173,33 +342,55 @@ a {
 }
 
 .barra1a {
-	background: url('../img/barra1a.png');
+	background: url('barra1a.png');
   height:105px;
   width:122px;
 }
 
 .barra1b {
-	background: url('../img/barra3b.png');
+	background: url('barra3b.png');
   height:105px;
   width:38px;
 }
 
 .barra2 {
-	background: url('../img/barra2.png');
+	background: url('barra2.png');
   height:85px;
   padding-top:20px !important;  
 }
 
 .barra3a {
-	background: url('../img/barra3a.png');
+	background: url('barra3a.png');
   height:105px;
   width:38px;
 }
 
 .barra3b {
-	background: url('../img/barra1b.png');
+	background: url('barra1b.png');
   height:105px;
   width:122px;
+}
+
+.tabella_contenuti {
+	background:#2370BF;
+  height:100px;
+  border-radius:50px 15px 15px 50px;
+  width:100%;
+  margin:12px 0px;
+	-webkit-box-shadow: 4px 4px 5px 0px rgba(20, 20, 20, 0.75);
+	-moz-box-shadow:    4px 4px 5px 0px rgba(20, 20, 20, 0.75);
+	box-shadow:         4px 4px 5px 0px rgba(20, 20, 20, 0.75);
+}
+
+.icona_contenuti {
+	width:50px;
+	border:3px solid #fff;
+	border-radius:26px;
+	position:relative;
+	left:5px;
+	-webkit-box-shadow: 4px 4px 5px 0px rgba(20, 20, 20, 0.75);
+	-moz-box-shadow:    4px 4px 5px 0px rgba(20, 20, 20, 0.75);
+	box-shadow:         4px 4px 5px 0px rgba(20, 20, 20, 0.75);
 }
 
 .anteprima_esempi_a {
@@ -229,6 +420,39 @@ a {
 	-webkit-box-shadow: 4px 4px 5px 0px rgba(20, 20, 20, 0.75);
 	-moz-box-shadow:    4px 4px 5px 0px rgba(20, 20, 20, 0.75);
 	box-shadow:         4px 4px 5px 0px rgba(20, 20, 20, 0.75);
+	margin-bottom:8px;
+}
+
+.icona_gallery {
+	border-radius:45px;
+	background:#4588D6;
+	-webkit-box-shadow: 4px 4px 5px 0px rgba(20, 20, 20, 0.75);
+	-moz-box-shadow:    4px 4px 5px 0px rgba(20, 20, 20, 0.75);
+	box-shadow:         4px 4px 5px 0px rgba(20, 20, 20, 0.75);
+	margin-bottom:8px;
+}
+
+.div_gallery {
+	font-family: 'Ubuntu', sans-serif;
+  color:#fff;
+  font-size:12px;
+  text-align:center;
+  display:inline-block;
+  margin:10px;
+}
+
+.div_camera {
+	font-family: 'Ubuntu', sans-serif;
+  color:#fff;
+  font-size:12px;
+  text-align:center;
+  display:inline-block;
+  margin:10px;
+}
+
+.div_multimedia {
+	width:100%;
+	text-align:center;
 }
 
 .td_camera {
@@ -257,7 +481,7 @@ a {
   font-size:12px;
   line-height:14px;
   width:105%;
-  margin:2px -10px;	
+  margin:2px -10px;
 }
 
 .testo_evidenza_b {
@@ -267,4 +491,65 @@ a {
   line-height:14px;
   width:105%;
   margin:2px 10px 0px 0px;	
+}
+
+.testo_contenuti_pw {
+	font-family: 'Ubuntu', sans-serif;
+  color:#333;
+  font-size:16px;
+  background:#fff;
+  border-radius:10px;
+  padding:3px 10px;
+  margin-left:5px;
+  height:28px;
+  max-width:110px;
+  border:2px solid #1C5DA0;
+}
+
+.testo_contenuti {
+	font-family: 'Ubuntu', sans-serif;
+  color:#fff;
+  font-size:12px;
+  line-height:14px;
+}
+
+.testo_acquista {
+	font-family: 'Ubuntu', sans-serif;
+  color:#fff;
+  font-size:14px;
+}
+
+.euro {
+	font-family: 'Ubuntu', sans-serif;
+  color:#fff;
+  font-weight:bold;	
+  font-size:12px;
+  margin:8px 0px 5px 0px;
+}
+
+.div_info {
+	font-family: 'Ubuntu', sans-serif;
+    color:#333;
+    font-size:14px;
+	width:auto;
+	margin:20px;
+	height:auto;
+	background:#fc0;
+	position:absolute;
+	padding:20px;
+	border:2px solid #959595;
+	border-radius:15px;
+	display:none;
+	z-index:2;
+	-webkit-box-shadow: 5px 5px 19px 0px rgba(0,0,0,0.54);
+  -moz-box-shadow: 5px 5px 19px 0px rgba(0,0,0,0.54);
+  box-shadow: 5px 5px 19px 0px rgba(0,0,0,0.54);
+	background: rgba(255,255,255,1);
+	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(217,217,217,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(217,217,217,1)));
+	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(217,217,217,1) 100%);
+	background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(217,217,217,1) 100%);
+	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(217,217,217,1) 100%);
+	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(217,217,217,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d9d9d9', GradientType=0 );
 }
