--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,19 +1,21 @@
 @font-face {
-  font-family: 'space-age';
-  src: url('../font/space_age-webfont.eot');
-  src: url('../font/space_age-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../font/space_age-webfont.woff2') format('woff2'),
-       url('../font/space_age-webfont.woff') format('woff'),
-       url('../font/space_age-webfont.ttf') format('truetype'),
-       url('../font/space_age-webfont.svg#space_ageregular') format('svg');
-  font-weight:normal;
-  font-style:normal;
+font-family: 'space-age';
+src: url('../font/space_age-webfont.eot');
+src: url('../font/space_age-webfont.eot?#iefix') format('embedded-opentype'),
+url('../font/space_age-webfont.woff2') format('woff2'),
+url('../font/space_age-webfont.woff') format('woff'),
+url('../font/space_age-webfont.ttf') format('truetype'),
+url('../font/space_age-webfont.svg#space_ageregular') format('svg');
+font-weight:normal;
+font-style:normal;
 }
 
 body {
-	background: url('background.jpg');
-  background-attachment: fixed;
-  background-position: center; 
+	background: url('../img/background.jpg');
+	background-attachment: fixed;
+	background-position: center;
+	margin:0;
+	padding:0
 }
 
 a {
@@ -21,20 +23,20 @@ a {
 }
 
 .splash_logo {
-  position:absolute;
-  margin:auto;
-  top:0;
-  right:0;
-  bottom:0;
-  left:0;
-  width:320px;
-  height:30px;
+	position:absolute;
+	margin:auto;
+	top:0;
+	right:0;
+	bottom:0;
+	left:0;
+	width:320px;
+	height:30px;
 }
 
 .container {
-  background-size: contain; 
-  width:100%;
-  height:500px;
+	width:100%;
+	height:auto;
+	margin-bottom:50px;
 }
 
 .box1 {
@@ -71,6 +73,13 @@ a {
 	text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
 }
 
+.logo_centrale {
+	font-family: 'space-age', sans-serif;
+	color:#fff;
+	font-size:1.8em;
+	text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
+}
+
 .doppiopunto {
 	font-family: 'space-age', sans-serif;
 	color:#fff;
@@ -81,42 +90,42 @@ a {
 }
 
 .input_login_pre {
-  width:18%;
-  height:40px;
-  margin:10px;
-  font-family: 'Ubuntu', sans-serif;
-  color:#3e3e3e;
-  font-size:21px;
-  border-radius:22px;
-  border:1px solid #d6d6d6;
-  background:#fff;
-  text-align:right;
-  -webkit-transition: all .5s ease;
-  -moz-transition: all .5s ease;
-  transition: all .5s ease;
-  padding:0px 10px;
+	width:18%;
+	height:40px;
+	margin:10px;
+	font-family: 'Ubuntu', sans-serif;
+	color:#3e3e3e;
+	font-size:21px;
+	border-radius:22px;
+	border:1px solid #d6d6d6;
+	background:#fff;
+	text-align:right;
+	-webkit-transition: all .5s ease;
+	-moz-transition: all .5s ease;
+	transition: all .5s ease;
+	padding:0px 10px;
 }
 .input_login_pre:focus {
-  width:41%;
+	width:41%;
 }
 
 .input_login_suf {
-  width:18%;
-  height:40px;
-  margin:10px;
-  font-family: 'Ubuntu', sans-serif;
-  color:#3e3e3e;
-  font-size:21px;
-  border-radius:22px;
-  border:1px solid #d6d6d6;
-  background:#fff;
-  -webkit-transition: all .5s ease;
-  -moz-transition: all .5s ease;
-  transition: all .5s ease;
-  padding:0px 10px;
+	width:18%;
+	height:40px;
+	margin:10px;
+	font-family: 'Ubuntu', sans-serif;
+	color:#3e3e3e;
+	font-size:21px;
+	border-radius:22px;
+	border:1px solid #d6d6d6;
+	background:#fff;
+	-webkit-transition: all .5s ease;
+	-moz-transition: all .5s ease;
+	transition: all .5s ease;
+	padding:0px 10px;
 }
 .input_login_suf:focus {
-  width:41%;
+	width:41%;
 }
 
 .testo1 {
@@ -126,16 +135,16 @@ a {
 }
 
 .bt_login {
-  font-family: 'space-age', sans-serif;
-  color:#fff;
-  font-size:33px;
-  border-radius:22px;
-  border:0px;
-  background:#4588d6;
-  padding:3px 20px;
-  cursor:pointer;
-  text-align:center;
-  width:87%;
+	font-family: 'space-age', sans-serif;
+	color:#fff;
+	font-size:33px;
+	border-radius:22px;
+	border:0px;
+	background:#4588d6;
+	padding:3px 20px;
+	cursor:pointer;
+	text-align:center;
+	width:67%;
 	text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
 	-webkit-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.75);
 	-moz-box-shadow:    2px 2px 5px 0px rgba(50, 50, 50, 0.75);
@@ -144,15 +153,15 @@ a {
 
 .bt_acquista {
 	font-family: 'space-age', sans-serif;
-  color:#fff;
-  font-size:26px;
-  border-radius:22px;
-  border:0px;
-  background:#1E9705;
-  padding:3px 20px;
-  cursor:pointer;
-  text-align:center;
-  width:67%;
+	color:#fff;
+	font-size:26px;
+	border-radius:22px;
+	border:0px;
+	background:#1E9705;
+	padding:3px 20px;
+	cursor:pointer;
+	text-align:center;
+	width:67%;
 	text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
 	-webkit-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.75);
 	-moz-box-shadow:    2px 2px 5px 0px rgba(50, 50, 50, 0.75);
@@ -161,16 +170,16 @@ a {
 
 .titolo_div_inserimenti {
 	font-family: 'Ubuntu', sans-serif;
-  color:#fff;
-  font-size:15px;
-  font-style:italic;
-  text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
+	color:#fff;
+	font-size:15px;
+	font-style:italic;
+	text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
 	background:#235EA2;
 	position:relative;
 	right:10px;
 	bottom:20px;
 	height:30px;
-  max-width:95px;
+	max-width:95px;
 	line-height:28px;
 	padding:0px 10px;
 	border-radius:9px 0px 9px 0px;
@@ -178,212 +187,244 @@ a {
 
 .titolo_div_contenuti {
 	font-family: 'Ubuntu', sans-serif;
-  color:#fff;
-  font-size:15px;
-  text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
+	color:#fff;
+	font-size:15px;
+	text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
 	background:#083B6F;
 	position:relative;
 	right:10px;
 	bottom:20px;
 	height:42px;
-  width:auto;
-  display:inline-block;
+	width:auto;
+	display:inline-block;
 	line-height:18px;
 	padding:5px 20px;
 	border-radius:9px 0px 9px 0px;
 }
 
 .titolo_testo_microverba {
-  font-family: 'Ubuntu', sans-serif;
-  color:#fff;
-  font-weight:bold;
-  font-size:28px;
-  width:99%;
-  text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
-  text-align:center;
-  margin:30px 0px 60px 0px;
+	font-family: 'Ubuntu', sans-serif;
+	color:#fff;
+	font-weight:bold;
+	font-size:28px;
+	width:99%;
+	text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
+	text-align:center;
+	margin:30px 0px 60px 0px;
 }
 
 .titolo_testo_albero {
-  font-family: 'Ubuntu', sans-serif;
-  color:#fff;
-  font-weight:bold;
-  font-size:18px;
-  margin-right:10px;
-  position:relative;
-  bottom:4px;
-  text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
+	font-family: 'Ubuntu', sans-serif;
+	color:#fff;
+	font-weight:bold;
+	font-size:18px;
+	margin-right:10px;
+	position:relative;
+	bottom:4px;
+	text-shadow: 1px 1px 1px rgba(50, 50, 50, 1);
 }
 
 .ico_info {
-	background: url('ico_info.png');
-  background-size:100%;
-  width:40px;
-  height:40px;
-  margin:0px 10px;
-  position:relative;
-  top:5px;
-  display:inline-block;
+	background: url('../img/ico_info.png');
+	background-size:100%;
+	width:32px;
+	height:32px;
+	margin:0px 10px;
+	position:relative;
+	top:5px;
+	border-radius:16px;
+	display:inline-block;
 	-webkit-filter: drop-shadow(2px 2px 3px #333);
-  filter: drop-shadow(2px 2px 3px #333); 
+	filter: drop-shadow(2px 2px 3px #333);
 }
 
 .ico_info_microverba {
-	background: url('ico_info.png');
-  background-size:100%;
-  width:40px;
-  height:40px;
-  margin:0px 10px;
-  position:relative;
-  top:5px;
-  display:inline-block;
+	background: url('../img/ico_info.png');
+	background-size:100%;
+	width:40px;
+	height:40px;
+	border-radius:20px;
+	margin:0px 10px;
+	position:relative;
+	top:5px;
+	display:inline-block;
 	-webkit-filter: drop-shadow(2px 2px 3px #333);
-  filter: drop-shadow(2px 2px 3px #333); 
+	filter: drop-shadow(2px 2px 3px #333);
 }
 
 .ico_buy {
-	background: url('ico_buy.png');
-  background-size:100%;
-  width:40px;
-  height:40px;
-  margin:0px 10px;
-  position:relative;
-  top:5px;
-  display:inline-block;
+	background: url('../img/ico_buy.png');
+	background-size:100%;
+	width:32px;
+	height:32px;
+	margin:0px 10px;
+	position:relative;
+	top:5px;
+	border-radius:16px;
+	display:inline-block;
 	-webkit-filter: drop-shadow(2px 2px 3px #333);
-  filter: drop-shadow(2px 2px 3px #333); 
+	filter: drop-shadow(2px 2px 3px #333);
 }
 
 .ico_lock {
-	background: url('ico_lock.png');
-  background-size:100%;
-  height:40px;
-  width:40px;
-  margin:0px 10px;
-  display:inline-block;
+	background: url('../img/ico_lock.png');
+	background-size:100%;
+	height:40px;
+	width:40px;
+	margin:0px 10px;
+	display:inline-block;
 	-webkit-filter: drop-shadow(2px 2px 3px #333);
-  filter: drop-shadow(2px 2px 3px #333);
+	filter: drop-shadow(2px 2px 3px #333);
 }
 
 .ico_unlock {
 	font-family: 'Ubuntu', sans-serif;
 	font-size:11px;
 	font-weight:bold;
-  color:#fff;
+	color:#fff;
 	background:#FF900B;
-  height:auto;
-  width:auto;
-  padding:3px 10px;
-  margin:0px 10px;
-  border-radius:5px;
-  /*display:inline-block;*/
-  display:none;
-  -webkit-filter: drop-shadow(2px 2px 3px #333);
-  filter: drop-shadow(2px 2px 3px #333);
+	height:auto;
+	width:auto;
+	padding:3px 10px;
+	margin:0px 10px;
+	border-radius:5px;
+	/*display:inline-block;*/
+	display:none;
+	-webkit-filter: drop-shadow(2px 2px 3px #333);
+	filter: drop-shadow(2px 2px 3px #333);
 }
 
 .ico_lock_microverba {
-	background: url('ico_lock.png');
-  background-size:100%;
-  height:40px;
-  width:40px;
-  margin:0px 10px;
-  position:relative;
-  top:5px;
-  display:inline-block;
+	background: url('../img/ico_lock.png');
+	background-size:100%;
+	height:40px;
+	width:40px;
+	border-radius:20px;
+	margin:0px 10px;
+	position:relative;
+	top:5px;
+	display:inline-block;
 	-webkit-filter: drop-shadow(2px 2px 3px #333);
-  filter: drop-shadow(2px 2px 3px #333); 
+	filter: drop-shadow(2px 2px 3px #333);
 }
 
 .ico_cart {
-  background: url('ico_buy.png');
-  background-size:100%;
-  width:40px;
-  height:40px;
-  margin:0px 10px;
-  display:inline-block;
+	background: url('../img/ico_buy.png');
+	background-size:100%;
+	width:40px;
+	height:40px;
+	margin:0px 10px;
+	display:inline-block;
 	-webkit-filter: drop-shadow(2px 2px 3px #333);
-  filter: drop-shadow(2px 2px 3px #333);
+	filter: drop-shadow(2px 2px 3px #333);
 }
 
 .ico_close {
-	background: url('ico_close.png');
-  background-size:100%;
-  width:26px;
-  height:26px;
-  margin:0px 0px 20px 0px;
-  position:relative;
-  bottom:10px;
-  left:10px;
-  float:right;
+	background: url('../img/ico_close.png');
+	background-size:100%;
+	width:26px;
+	height:26px;
+	margin:0px 0px 20px 0px;
+	position:relative;
+	bottom:10px;
+	left:10px;
+	float:right;
 }
 
 .tabella_risultati {
 	border-spacing:0;
-  border-collapse:collapse;
-  padding:0px;
-  width:100%;
+	border-collapse:collapse;
+	padding:0px;
+	width:100%;
 }
 
 .tabella_risultati td, table th {
-  padding:0;
+	padding:0;
+}
+
+.tabella_logo {
+	border-spacing:0;
+	border-collapse:collapse;
+	width:100%;
+	height:80px;
+}
+
+.tabella_dock {
+	border-spacing:0;
+	border-collapse:collapse;
+	padding:0px;
+	width:100%;
+}
+
+.tabella_dock td, table th {
+	padding:0px;
+	border-right:1px solid #053164;
+	height:60px;
+}
+
+.td_dock {
+	color:#fff;
+	font-family: 'Ubuntu', sans-serif;
+	font-size:12px;
+	text-decoration:none;
+	width:20%;
 }
 
 .tabella_camera {
 	border-spacing:0;
-  border-collapse:collapse;
-  padding:0px;
-  width:100%;
-  margin-top:10px;
+	border-collapse:collapse;
+	padding:0px;
+	width:100%;
+	margin-top:10px;
 }
 
 .tabella_camera td, table th {
-  padding:0;
+	padding:0;
 }
 
 .barra1a {
-	background: url('barra1a.png');
-  height:105px;
-  width:122px;
+	background: url('../img/barra1a.png');
+	height:105px;
+	width:122px;
 }
 
 .barra1b {
-	background: url('barra3b.png');
-  height:105px;
-  width:38px;
+	background: url('../img/barra3b.png');
+	height:105px;
+	width:38px;
 }
 
 .barra2 {
-	background: url('barra2.png');
-  height:85px;
-  padding-top:20px !important;  
+	background: url('../img/barra2.png');
+	height:85px;
+	padding-top:20px !important;
 }
 
 .barra3a {
-	background: url('barra3a.png');
-  height:105px;
-  width:38px;
+	background: url('../img/barra3a.png');
+	height:105px;
+	width:38px;
 }
 
 .barra3b {
-	background: url('barra1b.png');
-  height:105px;
-  width:122px;
+	background: url('../img/barra1b.png');
+	height:105px;
+	width:122px;
 }
 
 .tabella_contenuti {
 	background:#2370BF;
-  height:100px;
-  border-radius:50px 15px 15px 50px;
-  width:100%;
-  margin:12px 0px;
+	height:100px;
+	border-radius:50px 15px 15px 50px;
+	width:100%;
+	margin:12px 0px;
 	-webkit-box-shadow: 4px 4px 5px 0px rgba(20, 20, 20, 0.75);
 	-moz-box-shadow:    4px 4px 5px 0px rgba(20, 20, 20, 0.75);
 	box-shadow:         4px 4px 5px 0px rgba(20, 20, 20, 0.75);
 }
 
 .icona_contenuti {
-	width:50px;
+	width:40px;
 	border:3px solid #fff;
 	border-radius:26px;
 	position:relative;
@@ -434,20 +475,20 @@ a {
 
 .div_gallery {
 	font-family: 'Ubuntu', sans-serif;
-  color:#fff;
-  font-size:12px;
-  text-align:center;
-  display:inline-block;
-  margin:10px;
+	color:#fff;
+	font-size:12px;
+	text-align:center;
+	display:inline-block;
+	margin:10px;
 }
 
 .div_camera {
 	font-family: 'Ubuntu', sans-serif;
-  color:#fff;
-  font-size:12px;
-  text-align:center;
-  display:inline-block;
-  margin:10px;
+	color:#fff;
+	font-size:12px;
+	text-align:center;
+	display:inline-block;
+	margin:10px;
 }
 
 .div_multimedia {
@@ -477,60 +518,60 @@ a {
 
 .testo_evidenza_a {
 	font-family: 'Ubuntu', sans-serif;
-  color:#fff;
-  font-size:12px;
-  line-height:14px;
-  width:105%;
-  margin:2px -10px;
+	color:#fff;
+	font-size:12px;
+	line-height:14px;
+	width:105%;
+	margin:2px -10px;
 }
 
 .testo_evidenza_b {
 	font-family: 'Ubuntu', sans-serif;
-  color:#fff;
-  font-size:12px;
-  line-height:14px;
-  width:105%;
-  margin:2px 10px 0px 0px;	
+	color:#fff;
+	font-size:12px;
+	line-height:14px;
+	width:105%;
+	margin:2px 10px 0px 0px;
 }
 
 .testo_contenuti_pw {
 	font-family: 'Ubuntu', sans-serif;
-  color:#333;
-  font-size:16px;
-  background:#fff;
-  border-radius:10px;
-  padding:3px 10px;
-  margin-left:5px;
-  height:28px;
-  max-width:110px;
-  border:2px solid #1C5DA0;
+	color:#333;
+	font-size:16px;
+	background:#fff;
+	border-radius:10px;
+	padding:3px 10px;
+	margin-left:5px;
+	height:28px;
+	max-width:110px;
+	border:2px solid #1C5DA0;
 }
 
 .testo_contenuti {
 	font-family: 'Ubuntu', sans-serif;
-  color:#fff;
-  font-size:12px;
-  line-height:14px;
+	color:#fff;
+	font-size:12px;
+	line-height:14px;
 }
 
 .testo_acquista {
 	font-family: 'Ubuntu', sans-serif;
-  color:#fff;
-  font-size:14px;
+	color:#fff;
+	font-size:14px;
 }
 
 .euro {
 	font-family: 'Ubuntu', sans-serif;
-  color:#fff;
-  font-weight:bold;	
-  font-size:12px;
-  margin:8px 0px 5px 0px;
+	color:#fff;
+	font-weight:bold;
+	font-size:12px;
+	margin:8px 0px 5px 0px;
 }
 
 .div_info {
 	font-family: 'Ubuntu', sans-serif;
-    color:#333;
-    font-size:14px;
+	color:#333;
+	font-size:14px;
 	width:auto;
 	margin:20px;
 	height:auto;
@@ -542,8 +583,8 @@ a {
 	display:none;
 	z-index:2;
 	-webkit-box-shadow: 5px 5px 19px 0px rgba(0,0,0,0.54);
-  -moz-box-shadow: 5px 5px 19px 0px rgba(0,0,0,0.54);
-  box-shadow: 5px 5px 19px 0px rgba(0,0,0,0.54);
+	-moz-box-shadow: 5px 5px 19px 0px rgba(0,0,0,0.54);
+	box-shadow: 5px 5px 19px 0px rgba(0,0,0,0.54);
 	background: rgba(255,255,255,1);
 	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(217,217,217,1) 100%);
 	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(217,217,217,1)));
@@ -552,4 +593,144 @@ a {
 	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(217,217,217,1) 100%);
 	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(217,217,217,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d9d9d9', GradientType=0 );
+}
+
+.dock {
+	position:fixed;
+	bottom:0;
+	width:100%;
+	height:60px;
+	text-align:center;
+	z-index:3;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#0358b3+0,1b3056+100 */
+	background: #0358b3; /* Old browsers */
+	background: -moz-linear-gradient(top,  #317bcd 0%, #1b3056 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  #317bcd 0%,#1b3056 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  #317bcd 0%,#1b3056 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0358b3', endColorstr='#1b3056',GradientType=0 ); /* IE6-9 */
+}
+
+.cart_page {
+	background:#fff;
+	width:100%;
+	padding:10px 0px;
+	text-align:center;
+}
+
+.titolo_ordine {
+	text-align:center;
+	font-family: 'Ubuntu', sans-serif;
+	color:#333;
+	font-size:18px;
+	color:#02275E;
+}
+
+.tabella_ordine {
+	width:94%;
+	border-radius:10px;
+}
+
+.tabella_ordine td {
+	border-top:2px solid #ddd;
+	font-family: 'Ubuntu', sans-serif;
+	color:#333;
+	font-size:16px;
+	color:#333;
+}
+
+.text_dati {
+	color:#cc0000;
+}
+
+.text_dati_min {
+	font-family: 'Ubuntu', sans-serif;
+	font-size:12px;
+}
+
+.bt_pagamento {
+	font-family: 'Ubuntu', sans-serif;
+	font-size:16px;
+	color:#fff;
+	font-weight:bold;
+	width:90%;
+	padding:20px 10px;
+	text-align:center;
+	background:#346CB4;
+	border-radius:10px;
+	border:0px;
+	cursor:pointer;
+	-webkit-box-shadow: 2px 2px 2px 0px rgba(50, 50, 50, 0.30);
+	-moz-box-shadow:    2px 2px 2px 0px rgba(50, 50, 50, 0.30);
+	box-shadow:         2px 2px 2px 0px rgba(50, 50, 50, 0.30);
+}
+
+.divisore {
+	width:94%;
+	border-top:2px solid #ddd;
+	margin:10px;
+	height:2px;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+.privacy {
+	font-family: 'Ubuntu', sans-serif;
+	font-size:13px;
+	color:#333;
+	font-weight:bold;
+}
+
+.quantity_cart {
+	background:#cc0000;
+	color:#fff;
+	font-family: 'Ubuntu', sans-serif;
+	font-size:10px;
+	line-height:16px;
+	text-align:center;
+	position:absolute;
+	left:51%;
+	top:1px;
+	width:16px;
+	height:16px;
+	padding:1px;
+	border-radius:8px;
+}
+
+.paginazione_on {
+	background:#346CB4;
+	color:#fff;
+	font-family: 'Ubuntu', sans-serif;
+	font-size:20px;
+	line-height:26px;
+	text-align:center;
+	width:26px;
+	height:26px;
+	margin:0px 2px;
+	padding:2px 8px;
+	border-radius:26px;
+}
+
+.paginazione_off {
+	background:#89B2E5;
+	color:#fff;
+	font-family: 'Ubuntu', sans-serif;
+	font-size:24px;
+	line-height:30px;
+	text-align:center;
+	width:30px;
+	height:30px;
+	margin:0px 2px;
+	padding:2px 9px;
+	border-radius:20px;
+}
+
+.paginazione_next {
+	background-image: url('../img/ico_arrow_dx.png');
+	background-size:100%;
+	width:32px;
+	height:32px;
+	margin-left:10px;
+	display:inline-block;
+	position:relative;
+	top:8px;
 }
