--- a/www/css/effects.css
+++ b/www/css/effects.css
@@ -3,12 +3,15 @@
   box-shadow: inset 0 0 0 2em var(--hover);
 }
 
+
 .pulse:hover,
-.pulse:focus {
+.pulse:focus,
+.pulse:active{
   -webkit-animation: pulse 1s;
           animation: pulse 1s;
   box-shadow: 0 0 0 2em rgba(255, 255, 255, 0);
 }
+
 
 @-webkit-keyframes pulse {
   0% {
